Added HTML login form

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <h1>Hello Github</h1>
-    <Script src="app.js"></Script>
+    <form>
+        <input type="email" placeholder="Enter your email">
+        <input type="password" placeholder="Enter your password">
+        <input type="submit" value="login"></form>
+    <script src="app.js"></script>
   </body>
 </html>
