--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
-    </head>>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Hello Github</h1>
-    <form>
-        <input type="email" placeholder="Enter your email">
-        <input type="password" placeholder="Enter your password">
-        <input type="submit" value="login"></form>
-    <script src="app.js"></script>
+    <div class="container">
+      <h1>Hello Github</h1>
+      <br />
+      <form>
+        <input type="email" placeholder="Enter your email" />
+        <input type="password" placeholder="Enter your password" />
+        <input type="submit" value="login" />
+        <br />
+        <a href="mailto:matt@delac.io" class="btn btn-primary contact-btn"
+          >Contact Us</a
+        >
+      </form>
+      <script src="app.js"></script>
+    </div>
   </body>
 </html>
